--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
                                 <a href="./img/gallery/male/Donald Empire Of Wisdom/384038_285205881528211_1446679041_n.jpg"
                                     data-fancybox="donald-empire-of-wisdom" data-caption="Donald empire of wisdom">
                                     <img src="./img/gallery/male/Donald Empire Of Wisdom/thumb/384038_285205881528211_1446679041_n.jpg" />
+                                    <span class="image-caption">Donald Empire of Wisdom</span>
                                 </a>
-                                <span class="image-caption">Donald Empire of Wisdom</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/male/Donald Empire Of Wisdom/dodi.JPG" data-fancybox="donald-empire-of-wisdom"
                                         data-caption="Donald empire of wisdom">
@@ -241,8 +241,8 @@
                                 <a href="./img/gallery/male/Hulio Empire Of Wisdom/14370377_10153860001190823_3457575012273218172_n.jpg"
                                     data-fancybox="hulio-empire-of-wisdom" data-caption="Hulio empire of wisdom">
                                     <img src="./img/gallery/male/Hulio Empire Of Wisdom/thumb/14370377_10153860001190823_3457575012273218172_n.jpg" />
+                                    <span class="image-caption">Hulio Empire of Wisdom</span>
                                 </a>
-                                <span class="image-caption">Hulio Empire of Wisdom</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/male/Hulio Empire Of Wisdom/14797499_1118601128188678_1367175639_n.jpg"
                                         data-fancybox="hulio-empire-of-wisdom" data-caption="Hulio empire of wisdom">
@@ -259,8 +259,8 @@
                                 <a href="./img/gallery/male/Remus Custodi nos/DSCN0954.JPG" data-fancybox="remus-empire-of-wisdom"
                                     data-caption="Remus Custodi nos">
                                     <img src="./img/gallery/male/Remus Custodi nos/thumb/DSCN0954.JPG" />
+                                    <span class="image-caption">Remus Custodi nos</span>
                                 </a>
-                                <span class="image-caption">Remus Custodi nos</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/male/Remus Custodi nos/remus (1).JPG" data-fancybox="remus-empire-of-wisdom"
                                         data-caption="Remus Custodi nos">
@@ -292,8 +292,8 @@
                                 <a href="./img/gallery/female/Anja Empire Of Wisdom/Image00003.jpg" data-fancybox="anja-empire-of-wisdom"
                                     data-caption="Anja empire of wisdom">
                                     <img src="./img/gallery/female/Anja Empire Of Wisdom/thumb/Image00003.jpg" />
+                                    <span class="image-caption">Anja Empire of Wisdom</span>
                                 </a>
-                                <span class="image-caption">Anja Empire of Wisdom</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/female/Anja Empire Of Wisdom/Image00001.jpg" data-fancybox="anja-empire-of-wisdom"
                                         data-caption="Anja empire of wisdom">
@@ -310,8 +310,8 @@
                                 <a href="./img/gallery/female/Eudora i Noa Hana/Eudora Empire Of Wisdom.jpg"
                                     data-fancybox="eudora-empire-of-wisdom" data-caption="Eudora empire of wisdom">
                                     <img src="./img/gallery/female/Eudora i Noa Hana/thumb/Eudora Empire Of Wisdom.jpg" />
+                                    <span class="image-caption">Eudora i Noa Hana</span>
                                 </a>
-                                <span class="image-caption">Eudora i Noa Hana</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/female/Eudora i Noa Hana/Noa Empire Of Wisdom.jpg"
                                         data-fancybox="eudora-empire-of-wisdom" data-caption="Noa empire of wisdom">
@@ -322,8 +322,8 @@
                                 <a href="./img/gallery/female/Euphoria Empire Of Wisdom/Image00002.jpg" data-fancybox="euphoria-empire-of-wisdom"
                                     data-caption="Euphoria empire of wisdom">
                                     <img src="./img/gallery/female/Euphoria Empire Of Wisdom/thumb/Image00002.jpg" />
+                                    <span class="image-caption">Euphoria Empire of Wisdom</span>
                                 </a>
-                                <span class="image-caption">Euphoria Empire of Wisdom</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/female/Euphoria Empire Of Wisdom/Image00001.jpg"
                                         data-fancybox="euphoria-empire-of-wisdom" data-caption="Euphoria empire of wisdom">
@@ -337,8 +337,8 @@
                                 <a href="./img/gallery/female/Iramatas Barracuda/Image00004.jpg" data-fancybox="irmatas-barracuda"
                                     data-caption="Irmatas Barracuda">
                                     <img src="./img/gallery/female/Iramatas Barracuda/thumb/Image00004.jpg" />
+                                    <span class="image-caption">Irmatas Barracuda</span>
                                 </a>
-                                <span class="image-caption">Irmatas Barracuda</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/female/Iramatas Barracuda/Image00001.jpg" data-fancybox="irmatas-barracuda"
                                         data-caption="Irmatas Barracuda">
@@ -376,8 +376,8 @@
                                 <a href="./img/gallery/female/Zvezda Adriatiki Winter/IMG_3730.JPG" data-fancybox="zvezda-adriatiki-winter"
                                     data-caption="Zvezda Adriatiki Winter">
                                     <img src="./img/gallery/female/Zvezda Adriatiki Winter/thumb/IMG_3730.JPG" />
+                                    <span class="image-caption">Zvezda Adriatiki Winter</span>
                                 </a>
-                                <span class="image-caption">Zvezda Adriatiki Winter</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/female/Zvezda Adriatiki Winter/IMG_3731.JPG" data-fancybox="zvezda-adriatiki-winter"
                                         data-caption="Zvezda Adriatiki Winter">
@@ -397,8 +397,8 @@
                                 <a href="./img/gallery/female/GoAndWinForAfina/IMG_E4906.JPG" data-fancybox="go-and-win-for-afina"
                                     data-caption="Go and win for Afina">
                                     <img src="./img/gallery/female/GoAndWinForAfina/thumb/IMG_E4906.JPG" />
+                                    <span class="image-caption">Go and win for Afina</span>
                                 </a>
-                                <span class="image-caption">Go and win for Afina</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/female/GoAndWinForAfina/afina1.jpg" data-fancybox="go-and-win-for-afina"
                                         data-caption="Go and win for Afina">
@@ -442,8 +442,8 @@
                                 <a href="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/irmatasBlackMamba(2).JPG"
                                     data-fancybox="irmatas-black-mamba-for-empire-of-wisdom" data-caption="Irmatas Black Mamba for Empire of Wisdom">
                                     <img src="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/thumb/irmatasBlackMamba(2).JPG" />
+                                    <span class="image-caption">Irmatas Black Mamba for Empire of Wisdom</span>
                                 </a>
-                                <span class="image-caption">Irmatas Black Mamba for Empire of Wisdom</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/irmatasBlackMamba(1).JPG"
                                         data-fancybox="irmatas-black-mamba-for-empire-of-wisdom" data-caption="Irmatas Black Mamba for Empire of Wisdom">
@@ -459,8 +459,8 @@
                             <div class="grid-item element-item transition kennel">
                                 <a href="./img/gallery/kennel/Image00038.jpg" data-fancybox="kennel" data-caption="Štenci">
                                     <img src="./img/gallery/kennel/thumb/Image00038.jpg" />
+                                    <span class="image-caption">Štenci</span>
                                 </a>
-                                <span class="image-caption">Štenci</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/kennel/Image00001.jpg" data-fancybox="kennel" data-caption="Štenci">
                                     </a>
@@ -611,8 +611,8 @@
                             <div class="grid-item element-item transition kennel">
                                 <a href="./img/gallery/ostalo/Image00007.jpg" data-fancybox="kennel-2" data-caption="Kennel">
                                     <img src="./img/gallery/ostalo/thumb/Image00007.jpg" />
+                                    <span class="image-caption">Kennel</span>
                                 </a>
-                                <span class="image-caption">Kennel</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/ostalo/Image00001.jpg" data-fancybox="kennel-2" data-caption="Kennel">
                                     </a>
@@ -710,7 +710,7 @@
             </div>
         </section>
         <section class="container" id="friends__block">
-            <div class="row">
+            <div class="row mb-3">
                 <div class="col-md-12">
                     <div class="heading__block" id="about__block">
                         <h2 class="section__heading">Naši prijatelji</h2>
@@ -724,7 +724,21 @@
                         <img src="./img/PDW.png" alt="">
                     </a>
                 </div>
-                <div class="col-sm-3 col-xs-12 text-center">
+                <div class="col-sm-6">
+                    <div class="row">
+
+                        <div class="col-sm-6 col-xs-12 text-center col-sm-offset-3">
+                            <a class="d-block friend__block" href="https://www.facebook.com/Prijateljska-%C5%A1apa-142140716203994/?hc_ref=ARRSPiovyA-bgQlIAUkhFc0_pdzUtgqzxnsnOiwZMbwSp4yJL-ReAzwZ60Vwo_y8M5c&fref=nf&__xts__[0]=68.ARAstJdqbN3-lF6pb58CopjIzRy5m8xcRB1yZZX4gXaL0JPtB6FoSpGyzHXNEdh_sQTIAqupDcFL_h2rcDhzoo5jpAC67ThLqG_GgxQyMCXmfq7KlxXPn7bANfyZwURrNwaOm5bxQURTzq3xCQ1oWv6faJM0tJwa_NkDQrWWUE2q-djFF68o&__tn__=kC-R"
+                            target="_blank">
+                            <div class="overlay">
+                                <h5>Prijateljska šapa</h5>
+                            </div>
+                            <img src="./img/prijateljska_sapa.png" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 col-xs-12 text-center pull-right">
                     <a class="d-block friend__block" href="http://www.alesvet.com/" target="_blank">
                         <div class="overlay">
                             <h5>Veterinarska ambulanta Alessandra</h5>
@@ -732,7 +746,9 @@
                         <img src="./img/alesvet.png" alt="">
                     </a>
                 </div>
-                <div class="col-sm-3 col-xs-12 text-center">
+            </div>
+            <div class="row">
+                <div class="col-sm-3 col-xs-12 text-center col-sm-offset-2">
                     <div class="friend__block" data-toggle="modal" data-target="#transport">
                         <div class="overlay">
                             <h5>Transport pasa Boban Janković</h5>
@@ -744,7 +760,8 @@
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header text-right">
-                                    <a href="#0" type="button" class="close" data-dismiss="modal"><img src="img/close.png" alt="close"></a>
+                                    <a href="#0" type="button" class="close" data-dismiss="modal"><img src="img/close.png"
+                                            alt="close"></a>
                                 </div>
                                 <div class="modal-body">
                                     <img src="./img/bj.PNG" alt="">
@@ -758,7 +775,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 col-xs-12 text-center">
+                <div class="col-sm-3 col-xs-12 text-center col-sm-offset-2">
                     <div class="friend__block" data-toggle="modal" data-target="#dresura">
                         <div class="overlay">
                             <h5>Dresura pasa Boško Ivkov</h5>
@@ -770,7 +787,8 @@
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header text-right">
-                                    <a href="#0" type="button" class="close" data-dismiss="modal"><img src="img/close.png" alt="close"></a>
+                                    <a href="#0" type="button" class="close" data-dismiss="modal"><img src="img/close.png"
+                                            alt="close"></a>
                                 </div>
                                 <div class="modal-body">
                                     <img src="./img/bi.png" alt="">
