--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@
                             <button class="button" data-filter=".male">Mužjaci</button>
                             <button class="button" data-filter=".female">Ženke</button>
                             <button class="button" data-filter=".kennel">Štenci</button>
+                            <button class="button" data-filter=".dog-shows">Izložbe</button>
+                            <button class="button" data-filter=".training">Trening</button>
                         </div>
                         <div class="grid">
                             <div class="grid-sizer"></div>
@@ -704,6 +706,226 @@
                                     </a>
                                 </div>
                             </div>
+                            <div class="grid-item element-item transition dog-shows">
+                                <a href="./img/gallery/izlozbe/izlozbe (1).jpg" data-fancybox="izlozbe" data-caption="Izložba">
+                                    <img src="./img/gallery/izlozbe/thumb/izlozbe (1).jpg" />
+                                    <span class="image-caption">Izložbe</span>
+                                </a>
+                                <div class="d-none">
+                                    <a href="./img/gallery/izlozbe/izlozbe (2).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (3).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (4).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (5).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (6).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (7).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (8).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (9).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (10).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (11).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (12).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (13).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (14).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (15).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (16).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (17).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (18).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (19).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (20).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (21).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (22).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (23).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (24).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (25).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (26).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (27).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (28).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (29).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (30).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                    <a href="./img/gallery/izlozbe/izlozbe (31).jpg" data-fancybox="izlozbe"
+                                        data-caption="Izložba">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="grid-item element-item transition training">
+                                <a href="./img/gallery/training/training (1).jpg" data-fancybox="training" data-caption="Trening">
+                                    <img src="./img/gallery/training/thumb/training-(1).jpg" />
+                                    <span class="image-caption">Trening</span>
+                                </a>
+                                <div class="d-none">
+                                    <a href="./img/gallery/training/training (2).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (3).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (4).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (5).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (6).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (7).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (8).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (9).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (10).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (11).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (12).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (13).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (14).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (15).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (16).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (17).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (18).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (19).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (20).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (21).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (22).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (23).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (24).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (25).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (26).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (27).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (28).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (29).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (30).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (31).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (32).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (33).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (34).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (35).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (36).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (37).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (38).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                    <a href="./img/gallery/training/training (39).jpg" data-fancybox="training"
+                                        data-caption="Trening">
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -729,16 +951,16 @@
 
                         <div class="col-sm-6 col-xs-12 text-center col-sm-offset-3">
                             <a class="d-block friend__block" href="https://www.facebook.com/Prijateljska-%C5%A1apa-142140716203994/?hc_ref=ARRSPiovyA-bgQlIAUkhFc0_pdzUtgqzxnsnOiwZMbwSp4yJL-ReAzwZ60Vwo_y8M5c&fref=nf&__xts__[0]=68.ARAstJdqbN3-lF6pb58CopjIzRy5m8xcRB1yZZX4gXaL0JPtB6FoSpGyzHXNEdh_sQTIAqupDcFL_h2rcDhzoo5jpAC67ThLqG_GgxQyMCXmfq7KlxXPn7bANfyZwURrNwaOm5bxQURTzq3xCQ1oWv6faJM0tJwa_NkDQrWWUE2q-djFF68o&__tn__=kC-R"
-                            target="_blank">
-                            <div class="overlay">
-                                <h5>Prijateljska šapa</h5>
-                            </div>
-                            <img src="./img/prijateljska_sapa.png" alt="">
-                        </a>
+                                target="_blank">
+                                <div class="overlay">
+                                    <h5>Prijateljska šapa</h5>
+                                </div>
+                                <img src="./img/prijateljska_sapa.png" alt="">
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-3 col-xs-12 text-center pull-right">
+                <div class="col-sm-3 col-xs-12 text-center pull-right">
                     <a class="d-block friend__block" href="http://www.alesvet.com/" target="_blank">
                         <div class="overlay">
                             <h5>Veterinarska ambulanta Alessandra</h5>
