--- a/index.html
+++ b/index.html
@@ -924,6 +924,12 @@
                                     <a href="./img/gallery/training/training (39).jpg" data-fancybox="training"
                                         data-caption="Trening">
                                     </a>
+                                    <a data-fancybox="training" href="https://www.youtube.com/watch?v=_H4rL-G-I5U"
+                                        data-caption="Trening"></a>
+                                    </a>
+                                    <a data-fancybox="training" href="https://www.youtube.com/watch?v=Vh_YcIplJFk"
+                                        data-caption="Trening"></a>
+                                    </a>
                                 </div>
                             </div>
                         </div>
